--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "L’Absurdité règne et l’amour en sauve."
 keyword: "Fantasy_Fran, Fantasy_Fran Blog, justFrances的博客, FrancesFu, StrayFran"
 url: "http://itsFrancesFu.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/itsFrancesFu/itsFrancesFu.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -18,12 +18,12 @@ sidebar-avatar: /img/avatar-m.jpg      # use absolute URL, seeing it's used in b
 
 # SNS settings
 RSS: false
-# weibo_username:     WeirdoOoO_燒麥好吃
+weibo_username:     WeirdoOoO_燒麥好吃
 zhihu_username:     Amaillusion
 github_username:    itsFrancesFu
 facebook_username:  Frances Fu
 jianshu_username:   
-#twitter_username:   Frances_ShawR
+twitter_username:   Frances_ShawR
 
 
 
