--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/itsFrancesFu/itsFrancesFu.github.io.git" # you 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "die Ewigkeit ist bloß ein Augenblick, gerade lang genug für einen Spaß."
-sidebar-avatar: /img/avatar-m.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/微信图片_20220829060850 avatar.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -21,7 +21,7 @@ RSS: false
 weibo_username:     WeirdoOoO_燒麥好吃
 zhihu_username:     Amaillusion
 github_username:    itsFrancesFu
-facebook_username:  Frances Fu
+facebook_username:  FrancesFu
 jianshu_username:   
 twitter_username:   Frances_ShawR
 
