--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Fantasy_Fran Blog
 SEOTitle: justFrances的博客 | Fantasy_Fran Blog
-header-img: img/post-bg-rwd.jpg
+header-img: img/微信图片_20220829142551 bgp.jpg
 email: fuhaowen1020@outlook.com
 description: "L’Absurdité règne et l’amour en sauve."
 keyword: "Fantasy_Fran, Fantasy_Fran Blog, justFrances的博客, FrancesFu, StrayFran"
