--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Fantasy_Fran Blog
 SEOTitle: justFrances的博客 | Fantasy_Fran Blog
 header-img: 微信图片_20220831181053 bgp2.jpg
 email: fuhaowen1020@outlook.com
-description: "L’Absurdité règne et l’amour en sauve."
+description: "die Ewigkeit ist bloß ein Augenblick, gerade lang genug für einen Spaß."
 keyword: "Fantasy_Fran, Fantasy_Fran Blog, justFrances的博客, FrancesFu, StrayFran"
 url: "http://itsFrancesFu.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -11,7 +11,7 @@ github_repo: "https://github.com/itsFrancesFu/itsFrancesFu.github.io.git" # you 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "die Ewigkeit ist bloß ein Augenblick, gerade lang genug für einen Spaß."
+sidebar-about-description: "L’Absurdité règne et l’amour en sauve."
 sidebar-avatar: /img/微信图片_20220829060850 avatar.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
