--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ RSS: false
 weibo_username:     WeirdoOoO_燒麥好吃
 zhihu_username:     Amaillusion
 github_username:    itsFrancesFu
-facebook_username:  FrancesFu
+facebook_username:  Vegan Cat
 jianshu_username:   
 twitter_username:   Frances_ShawR
 
