--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ sidebar-avatar: /img/微信图片_20220829060850 avatar.jpg      # use absolute 
 
 # SNS settings
 RSS: false
-weibo_username:     yanyh02@163.com
-zhihu_username:     +8613818615800
+weibo_username:     2352697587
+zhihu_username:     dao-zhu-mandellemonad
 github_username:    itsFrancesFu
 facebook_username:  itsFrancesFu
 jianshu_username:   
