--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,7 @@ gitalk:
   repo: itsFrancesFu.github.io    #仓库名称
   owner: itsFrancesFu    #github用户名
   admin: itsFrancesFu
+  id: /itsFrancesFu.github.io
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
