--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Fantasy_Fran Blog
+title: Fantasy_Fran's Blog
 SEOTitle: justFrances的博客 | Fantasy_Fran Blog
 header-img: img/微信图片_20220831181053 bgp2.jpg
 email: fuhaowen1020@outlook.com
