--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: justFrances的博客 | Fantasy_Fran Blog
 header-img: img/微信图片_20220831181053 bgp2.jpg
 email: fuhaowen1020@outlook.com
 description: "die Ewigkeit ist bloß ein Augenblick, gerade lang genug für einen Spaß."
-keyword: "Fantasy_Fran, Fantasy_Fran Blog, justFrances的博客, FrancesFu, StrayFran"
+keyword: "Fantasy_Fran, Fantasy_Fran Blog, justFrances的博客, itsFrancesFu, StrayFran"
 url: "https://itsFrancesFu.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/itsFrancesFu/itsFrancesFu.github.io.git" # you code repository
