--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-disqus_username: justFrances
+disqus_username: fantasy-frans-blog
 
 # Gitalk
 gitalk:
