--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ sidebar-avatar: /img/微信图片_20220829060850 avatar.jpg      # use absolute 
 RSS: false
 douban_username:     179967478
 weibo_username:     2352697587
-zhihu_username:     dao-zhu-mandellemonad
+zhihu_username:     
 github_username:    itsFrancesFu
 facebook_username:  itsFrancesFu
 jianshu_username:   
